--- a/tos-web/src/index.html
+++ b/tos-web/src/index.html
@@ -8,7 +8,7 @@
   <base href="/">
   <link rel="manifest" href="/manifest.json">
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
-  <title>#{seo-title}#</title>
+  <title>handtos.mochisuke.jp</title>
 
   <!-- Additional performance tweaks -->
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="dns-prefetch" href="https://fonts.googleapis.com">
