--- a/tos-web/src/index.html
+++ b/tos-web/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="#{seo-description}#">
+  <!-- <meta name="description" content="#{seo-description}#"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <base href="/">
